# fitscut

./: ChangeLog  INSTALL  INSTALL_HLAWEB  INSTALL_OSX  INSTALL_SOLARIS  INSTALL_WITH_SCISOFT  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TODO  blurb.c  blurb.h  colormap.c  colormap.h  config.h.in  configure  configure.in  draw.c  draw.h  extract.c  extract.h  file_check.c  file_check.h  fitscut.c  fitscut.h  fitscut.spec  fitscut.spec.in  getopt.c  histogram.c  histogram.h  image_scale.c  image_scale.h  output_fits.c  output_fits.h  output_graphic.c  output_graphic.h  (+17 more)
